# termracer

./: Cargo.toml  README.md  error  rustfmt.toml
assets/: README.md
src/: app.rs  command_parser.rs  constants.rs  line.rs  line_block.rs  main.rs  session.rs  session_event_handler.rs  stats_line.rs  widget.rs  word_generator.rs
src/widgets/: line_block_widget.rs  line_widget.rs  mod.rs  session_widget.rs  stats_line_widget.rs
termracer_client/: Cargo.toml
termracer_client/src/: command.rs  framework.rs  game.rs  layout.rs  main.rs  models.rs  rect.rs  solo_game.rs  throttler.rs  util.rs  window.rs
termracer_client/src/framework/: coord.rs  layout.rs  rect.rs  split.rs  window.rs
termracer_client/src/game/: solo_game.rs
termracer_client/src/models/: game_result.rs  progress.rs
termracer_client/src/util/: cli.rs  command.rs
termracer_client/src/views/: line.rs  line_block.rs  mod.rs  progress_bar.rs  stats_line.rs  view.rs
termracer_word_generator/: Cargo.toml
termracer_word_generator/src/: lib.rs  word_generator.rs
