[package]
name = "termracer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termracer_word_generator = { path = "../termracer_word_generator" }
crossterm = "0.25"
unicode-segmentation = "1.10.0"
unicode-width = "0.1.10"
